--- a/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
+++ b/src/app/components/views/livro/livro-read-all/livro-read-all.component.html
@@ -1,11 +1,11 @@
 <div class="content">
     <div class="title">
-        <h1>Categoria</h1>
+        <h1>Livros</h1>
     </div>
 
-    <button class="mat-elevation-z8" (click)="navegarParaCategoriaCreate()" mat-stroked-button color="primary">Nova Categoria</button>
+    <button class="mat-elevation-z8" (click)="navegarParaCriarLivro()" mat-stroked-button color="primary">Novo Livro</button>
     <div class="mat-elevation-z8 content-table">
-        <table class="table" mat-table [dataSource]="categorias">
+        <table class="table" mat-table [dataSource]="livros" >
 
             <!-- Position Column -->
             <ng-container matColumnDef="id">
@@ -14,21 +14,15 @@
             </ng-container>
           
             <!-- Name Column -->
-            <ng-container matColumnDef="nome">
-              <th mat-header-cell *matHeaderCellDef>Nome</th>
-              <td mat-cell *matCellDef="let row"> {{row.nome}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="descricao">
-              <th mat-header-cell *matHeaderCellDef>Descrição</th>
-              <td mat-cell *matCellDef="let row"> {{row.descricao}} </td>
+            <ng-container matColumnDef="titulo">
+              <th mat-header-cell *matHeaderCellDef>Titulo</th>
+              <td mat-cell *matCellDef="let row"> {{row.titulo}} </td>
             </ng-container>
 
             <ng-container matColumnDef="livros">
-                <th mat-header-cell *matHeaderCellDef>Livros</th>
+                <th mat-header-cell *matHeaderCellDef>LER LIVRO</th>
                 <td mat-cell *matCellDef="let row">
-                    <a routerLink="{{row.id}}/livros" class="livros">
+                    <a routerLink="{{row.id}}/read">
                         <i class="material-icons">book</i>
                     </a>
                 </td>
@@ -38,10 +32,10 @@
             <ng-container matColumnDef="acoes">
               <th class="math-header" mat-header-cell *matHeaderCellDef>Ações</th>
               <td mat-cell *matCellDef="let row"> 
-                <a routerLink="update/{{row.id}}" class="edit">
+                <a class="edit" routerLink="{{ row.id }}/update">
                     <i class="material-icons">edit</i>
                 </a>
-                <a routerLink="delete/{{row.id}}" class="delete">
+                <a routerLink="{{ row.id }}/delete" class="delete">
                     <i class="material-icons">delete</i>
                 </a>
               </td>
